# StylesageTest

./: LICENSE  README.md  exported_data.sql  package-lock.json
backend/: Dockerfile  createsuperuser.py  dev.envs  docker-compose.yml  env.sh  pyproject.toml
backend/core/: asgi.py  functions.py  settings.dev.py  settings.pro.py  settings.py  urls.py
backend/coupons/: admin.py  models.py  serializers.py  urls.py  views.py
backend/coupons/migrations/: 0001_initial.py  0002_auto_20220715_2036.py  0003_alter_coupon_promotion_type.py  0004_alter_coupon_promotion_type.py  0005_alter_coupon_promotion_type.py  0006_alter_coupon_value.py
backend/locale/es/LC_MESSAGES/: django.po
backend/static/data/: coupons.json
backend/templates/emails/: user_confirm_account.html  user_confirm_account.txt  user_confirm_account2.html  user_confirm_account_bk.html  user_confirm_message.html  user_portfolio_invitation.html  user_reset_password.html
backend/users/: urls.py  views.py
frontend/: package-lock.json  package.json  quasar.config.js  tsconfig.json  vue.config.js
frontend/src/assets/json/: cats_data.json
frontend/src/components/: BadgeCounter.vue  EssentialLink.vue  ListPagination.vue  ListPagination2.vue  ListPagination3.vue  ShowCatInfo.vue  models.ts
frontend/src/components/charts/: ApexLine.vue  (+5 more)
frontend/src/css/: quasar.variables.scss
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: Dashboard.vue  Login-1.vue  LoginPage.vue  SectionOne.vue  SectionOne_BK.vue  SectionTree.vue  SectionTwo.vue
frontend/src/router/: axiosInterceptor.js  routes.ts
