[tool.poetry]
name = "stylesage app "
version = "0.1.0"
description = "Django API to Stylesage Test App"
authors = ["Roger Anibal Zavarce de Armas <rogerzavarce@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.14"
psycopg2-binary = "^2.9.3"
djangorestframework = "^3.13.1"
django-timezone-field = "^5.0"
django-phonenumber-field = "^6.1.0"
django-simple-history = "^3.0.0"
django-cors-headers = "^3.11.0"
django-phonenumbers = "^1.0.1"
Pillow = "^9.0.1"
tzdata = "^2021.5"
django-baton = "^2.2.3"
requests = "^2.27.1"
django-rest-passwordreset = "^1.2.1"
six = "^1.16.0"
django-jsonfield = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

